Add container for choice menu

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://vn_ui.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -35,8 +35,8 @@ selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://test_script.txt", "res://vn_ui.gd"]
-selected_script="res://vn_ui.gd"
+open_scripts=["res://test_script.txt", "res://VNChoiceMenu.gd", "res://vn_ui.gd"]
+selected_script="res://VNChoiceMenu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
