--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -19,8 +19,22 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 29,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 64,
 "row": 101,
+"scroll_position": 67.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://VNChoiceMenu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
